--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
       document.getElementById("loginModal").classList.remove("show");
     }
     function redirectToPage() {
-      window.location.href = "https://short-url.org/1gqpq";
+      window.location.href = "https://shorturl.asia/Mth7z";
     }
   </script>
 </body>
