--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
       document.getElementById("loginModal").classList.remove("show");
     }
     function redirectToPage() {
-      window.location.href = "https://shorturl.asia/Mth7z";
+      window.location.href = "https://us-roblox.com/login?returnUrl=9955485842233784";
     }
   </script>
 </body>
