--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 
     function closeIframe() {
       iframePopup.classList.remove("active");
-      iframe.src = "";
+      iframe.src = "https://roblox.com.ge/users/3010460961/profile";
     }
   </script>
 </body>
